# crs-exif-cleaner-tool

./: .gitignore  Cargo.toml  README.md
scripts/: fetch-exiftool.sh
src/: main.rs
