[package]
name = "exif-cleaner"
version = "0.1.0"
edition = "2024"
description = "CRS EXIF Cleaner — remove EXIF metadata from photos in place"

[dependencies]
anyhow = "1.0.104"
eframe = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[package.metadata.bundle]
name = "CRS EXIF Cleaner"
identifier = "com.crs.exif-cleaner"
category = "public.app-category.utilities"
short_description = "Remove EXIF metadata by dropping photos"
osx_minimum_system_version = "11.0"
resources = ["resources/exiftool"]

[profile.release]
lto = "thin"
strip = true
